--- a/estilo/_horario.scss
+++ b/estilo/_horario.scss
@@ -1,41 +1,1 @@
-.body-principal {
-    .table-titulo {
-        text-align: center;
-        font-family: 'Alata', sans-serif;
-        font-weight: 600;
-        margin: 0 0 30px;
-    }
-
-    .table {
-        background-color: #212121;
-        color: white;
-        font-size: 100%;
-        box-shadow: 10px 10px 10px #000000;
-
-        .table-text {
-            text-align: center;
-        }
-
-        .table-text:hover {
-            background-color: red;
-        }
-    }
-
-    .table-green:hover {
-        background-color: #2b9348;
-    }
-
-
-    .table-titulo {
-        text-align: center;
-        font-family: 'Alata', sans-serif;
-        font-weight: 600;
-        margin: 0 0 30px;
-    }
-
-    @media (max-width: 425px) {
-        .table {
-            font-size: 64%;
-        }
-    }
-}
+@import "variaveis";.body-principal {.table-titulo {text-align: $textCenter;font-family: $FonteFamily;font-weight: $fonteW600;margin: 0 0 30px;}.table {background-color: $corDeFundoPrincipal;color: $corBranca;font-size: 100%;box-shadow: 10px 10px 10px #000000;.table-text {text-align: $textCenter;}.table-text:hover {background-color: #8d0801;}}.table-green:hover {background-color: $corPrincipal;}.table-titulo {text-align: $textCenter;font-family: $FonteFamily;font-weight: $fonteW600;margin: 0 0 30px;}@media (max-width: 425px) {.table {font-size: 64%;}}}
