--- a/estilo/_parallax-top.scss
+++ b/estilo/_parallax-top.scss
@@ -1,106 +1,1 @@
-.body-principal {
-
-    .main-principal {
-        margin-top: 13px;
-
-        .parallax {
-            background-attachment: fixed;
-            height: 525px;
-            background-size: cover;
-            background-repeat: no-repeat;
-            background-position: center center;
-
-            .titulo-parallax {
-                position: absolute;
-                top: 0;
-                bottom: 0;
-                left: 0;
-                right: 0;
-                margin: auto;
-                width: 29%;
-                height: 100px;
-                color: white;
-                text-align: center;
-                font-family: 'Alata', sans-serif;
-
-                .tituloP {
-                    font-size: 4rem;
-                }
-
-                .tituloP::after {
-                    content: '|';
-                    margin-left: 1px;
-                    opacity: 1;
-                    animation: pisca .7s infinite;
-                    font-size: 80%;
-                }
-
-                @keyframes pisca {
-
-                    0% {
-                        opacity: 1;
-                    }
-
-                    50% {
-                        opacity: 0;
-                    }
-
-                    100% {
-                        opacity: 1;
-                    }
-                }
-
-            }
-        }
-
-        .pi {
-            background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.5)), url('../img/salvador.jpg');
-        }
-    }
-
-    @media (max-width: 425px) {
-        .main-principal {
-            .parallax {
-                background-size: cover;
-                background-repeat: no-repeat;
-                background-position: right;
-
-                .titulo-parallax {
-                    width: unset;
-                    width: 60%;
-
-                    .tituloP {
-                        font-size: 35px;
-                    }
-                }
-            }
-        }
-    }
-
-    @media (min-width: 426px) and (max-width: 991px) {
-        .main-principal {
-            .parallax {
-
-                .titulo-parallax {
-                    width: unset;
-                    width: 50%;
-
-                    .tituloP {
-                        font-size: 50px;
-                    }
-                }
-            }
-        }
-    }
-
-    /* Ajuste do titulo height */
-    @media (min-width: 1818px) and (max-width: 2560px) {
-        .main-principal {
-            .parallax {
-                .titulo-parallax {
-                    height: 40%;
-                }
-            }
-        }
-    }
-}
+@import "variaveis";.body-principal {.main-principal {margin-top: 13px;.parallax {background-attachment: fixed;height: 525px;background-size: cover;background-repeat: no-repeat;background-position: center center;.titulo-parallax {position: absolute;top: $zero;bottom: $zero;left: $zero;right: $zero;margin: auto;width: 29%;height: 100px;color: $corBranca;text-align: $textCenter;font-family: $FonteFamily;.tituloP {font-size: 4rem;}.tituloP::after {content: '|';margin-left: 1px;opacity: 1;animation: pisca .7s infinite;font-size: 80%;}@keyframes pisca {0% {opacity: 1;}50% {opacity: $zero;}100% {opacity: 1;}}}}.pi {background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.5)), url('../img/salvador.jpg');}}@media (max-width: 425px) {.main-principal {.parallax {background-size: cover;background-repeat: no-repeat;background-position: right;.titulo-parallax {width: unset;width: 60%;.tituloP {font-size: 35px;}}}}}@media (min-width: 426px) and (max-width: 991px) {.main-principal {.parallax {.titulo-parallax {width: unset;width: 50%;.tituloP {font-size: 50px;}}}}}/* Ajuste do titulo height */@media (min-width: 1818px) and (max-width: 2560px) {.main-principal {.parallax {.titulo-parallax {height: 40%;}}}}}
