--- a/estilo/_separador.scss
+++ b/estilo/_separador.scss
@@ -1,121 +1,1 @@
-.body-principal {
-
-    .separador-03 {
-        background-image: url('../img/separador/kit-03.png');
-        background-repeat: no-repeat;
-        height: 65px;
-        margin: 25px auto 0px;
-        max-width: 70%;
-    }
-
-    .separador-02 {
-        background-image: url('../img/separador/kit-02.png');
-        background-repeat: no-repeat;
-        height: 65px;
-        margin: 25px auto;
-        max-width: 70%;
-    }
-
-    .separador-01 {
-        background-image: url('../img/separador/kit-01.png');
-        background-repeat: no-repeat;
-        height: 65px;
-        margin: 0 auto;
-        max-width: 70%;
-    }
-
-    @media (min-width: 1200px) and (max-width: 2560px) {
-
-        .separador-01,
-        .separador-02,
-        .separador-03 {
-            max-width: 85%;
-        }
-    }
-
-    @media (min-width: 992px) and (max-width: 1199px) {
-
-        .separador-01,
-        .separador-02,
-        .separador-03 {
-            max-width: 100%;
-        }
-    }
-
-    @media (min-width: 768px) and (max-width: 991px) {
-        .separador-03 {
-            background-image: url('../img/separador/kit-03-s.png');
-            background-repeat: no-repeat;
-            height: 65px;
-            margin: 25px auto;
-            max-width: 65%;
-        }
-
-        .separador-02 {
-            background-image: url('../img/separador/kit-02-s.png');
-            background-repeat: no-repeat;
-            height: 65px;
-            margin: 25px auto;
-            max-width: 65%;
-        }
-
-        .separador-01 {
-            background-image: url('../img/separador/kit-01-s.png');
-            background-repeat: no-repeat;
-            height: 65px;
-            margin: 0 auto;
-            max-width: 65%;
-        }
-    }
-
-    @media (min-width: 426px) and (max-width: 767px) {
-        .separador-03 {
-            background-image: url('../img/separador/kit-03-sm.png');
-            max-width: 65%;
-        }
-
-        .separador-02 {
-            background-image: url('../img/separador/kit-02-sm.png');
-            max-width: 65%;
-        }
-
-        .separador-01 {
-            background-image: url('../img/separador/kit-01-sm.png');
-            max-width: 65%;
-        }
-    }
-
-    @media(max-width: 425px) {
-        .separador-03 {
-            background-image: url('../img/separador/kit-03-sm.png');
-            max-width: 65;
-        }
-
-        .separador-02 {
-            background-image: url('../img/separador/kit-02-sm.png');
-            max-width: 65;
-        }
-
-        .separador-01 {
-            background-image: url('../img/separador/kit-01-sm.png');
-            max-width: 65;
-        }
-    }
-
-    @media(max-width: 320px) {
-        .separador-03 {
-            background-image: url('../img/separador/kit-03-sm.png');
-            max-width: 90%;
-        }
-
-        .separador-02 {
-            background-image: url('../img/separador/kit-02-sm.png');
-            max-width: 90%;
-        }
-
-        .separador-01 {
-            background-image: url('../img/separador/kit-01-sm.png');
-            max-width: 90%;
-        }
-    }
-}
+@import "variaveis";.body-principal {.separador-03 {background-image: url('../img/separador/kit-03.png');@include separadorD;margin: 25px auto 0px;}.separador-02 {background-image: url('../img/separador/kit-02.png');@include separadorD;margin: 25px auto;}.separador-01 {background-image: url('../img/separador/kit-01.png');@include separadorD;margin: 0 auto;}@media (min-width: 1200px) and (max-width: 2560px) {.separador-01,.separador-02,.separador-03 {max-width: 85%;}}@media (min-width: 992px) and (max-width: 1199px) {.separador-01,.separador-02,.separador-03 {max-width: 100%;}}@media (min-width: 768px) and (max-width: 991px) {.separador-03 {background-image: url('../img/separador/kit-03-s.png');@include separadorM;margin: 25px auto;}.separador-02 {background-image: url('../img/separador/kit-02-s.png');@include separadorM;margin: 25px auto;}.separador-01 {background-image: url('../img/separador/kit-01-s.png');@include separadorM;margin: 0 auto;}}@media (min-width: 426px) and (max-width: 767px) {.separador-03 {background-image: url('../img/separador/kit-03-sm.png');max-width: $maxW65; }.separador-02 {background-image: url('../img/separador/kit-02-sm.png');max-width: $maxW65; }.separador-01 {background-image: url('../img/separador/kit-01-sm.png');max-width: $maxW65; }}@media(max-width: 425px) {.separador-03 {background-image: url('../img/separador/kit-03-sm.png');max-width: $maxW65; }.separador-02 {background-image: url('../img/separador/kit-02-sm.png');max-width: $maxW65; }.separador-01 {background-image: url('../img/separador/kit-01-sm.png');max-width: $maxW65; }}@media(max-width: 320px) {.separador-03 {background-image: url('../img/separador/kit-03-sm.png');max-width: 90%;}.separador-02 {background-image: url('../img/separador/kit-02-sm.png');max-width: 90%;}.separador-01 {background-image: url('../img/separador/kit-01-sm.png');max-width: 90%;}}}
