--- a/estilo/style.scss
+++ b/estilo/style.scss
@@ -1,8 +1,9 @@
-@import "./_topo.scss";
-@import "./_rodaPe.scss";
-@import "./_contato.scss";
-@import "./_parallax-top.scss";
-@import "./_horario.scss";
-@import "./_separador.scss";
-@import "./_slick.scss";
-@import "./_duvida.scss";
+@import "topo";
+@import "rodaPe";
+@import "contato";
+@import "parallax-top";
+@import "horario";
+@import "separador";
+@import "slick";
+@import "duvida";
+@import "variaveis";
