--- a/estilo/_duvida.scss
+++ b/estilo/_duvida.scss
@@ -1,77 +1,1 @@
-.body-principal {
-    .duvida-pri {
-        max-width: 1093px;
-        margin: 65px auto 0;
-        font-family: 'Alata', sans-serif;
-
-        .titulo-duvida {
-            text-align: center;
-            font-weight: 600;
-            margin: 20px auto 40px;
-        }
-
-        .duvida-seg {
-            background-image: url('../img/barbearia-o.png');
-            background-repeat: no-repeat;
-            background-color: #212121;
-            box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
-
-            .seg-duvida {
-                margin: auto 0;
-
-                .texto-duvida {
-                    color: #fff;
-                    text-align: center;
-                    padding: 57px 26px;
-                }
-            }
-
-            .img-duvida {
-                max-width: 100% !important;
-                margin-top: 30px;
-            }
-        }
-    }
-
-    @media (max-width: 425px) {
-        .duvida-pri {
-            .titulo-duvida {
-                margin: -35px auto 40px;
-            }
-
-            .duvida-seg {
-                .texto-duvida {
-                    font-size: 20px;
-                    padding: 20px 20px 0 !important;
-                }
-            }
-        }
-    }
-
-    @media (min-width: 768px) and (max-width: 991px) {
-        .duvida-pri {
-            .titulo-duvida {
-                margin: -25px auto 40px;
-            }
-
-            .duvida-seg {
-                position: relative;
-
-                .texto-duvida {
-                    color: #fff;
-                    text-align: center;
-                    padding: 57px 26px;
-                }
-
-                .img-duvida {
-                    margin-top: 0;
-                    max-width: 100% !important;
-                    position: absolute;
-                    left: -20px;
-                    top: 60px;
-                }
-            }
-        }
-
-    }
-}
+@import "variaveis";.body-principal {.duvida-pri {max-width: 1093px;margin: 65px auto $zero;font-family: $FonteFamily;.titulo-duvida {text-align: $textCenter;font-weight: $fonteW600;margin: 20px auto 40px;}.duvida-seg {background-image: url('../img/barbearia-o.png');background-repeat: no-repeat;background-color: $corDeFundoPrincipal;box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);.seg-duvida {margin: auto $zero;.texto-duvida {color: $corBranca;text-align: $textCenter;padding: 57px 26px;}}.img-duvida {max-width: $maxW;margin-top: 30px;}}}@media (max-width: 425px) {.duvida-pri {.titulo-duvida {margin: -35px auto 40px;}.duvida-seg {.texto-duvida {font-size: 20px;padding: 20px 20px $zero !important;}}}}@media (min-width: 768px) and (max-width: 991px) {.duvida-pri {.titulo-duvida {margin: -25px auto 40px;}.duvida-seg {position: relative;.texto-duvida {color: $corBranca;text-align: $textCenter;padding: 57px 26px;}.img-duvida {margin-top: $zero;max-width: $maxW;position: absolute;left: -20px;top: 60px;}}}}}
