--- a/estilo/_slick.scss
+++ b/estilo/_slick.scss
@@ -1,42 +1,1 @@
-.body-principal {
-    #servicos {
-        padding-top: 1px;
-        margin-bottom: 35px;
-
-        .titulo-slick {
-            text-align: center;
-            font-family: 'Alata', sans-serif;
-            font-weight: 600;
-            margin: 15px 0px;
-        }
-
-        .slick-principal {
-            .titulo-slick01 {
-                max-width: 180px;
-                text-align: center;
-            }
-        }
-    }
-
-    .main-principal {
-        .carousel {
-            .slick-arrow {
-                display: none !important;
-            }
-
-            .slick-dots {
-                display: none !important;
-            }
-        }
-
-        @media (max-width: 479px) {
-            .img-slick {
-                margin: 0 auto;
-            }
-
-            .titulo-slick01 {
-                margin: 0 auto;
-            }
-        }
-    }
-}
+@import "variaveis";.body-principal {#servicos {padding-top: 1px;margin-bottom: 35px;.titulo-slick {text-align: $textCenter;font-family: $FonteFamily;font-weight: $fonteW600;margin: 15px $zero;}.slick-principal {.titulo-slick01 {max-width: 180px;text-align: $textCenter;}}}.main-principal {.carousel {.slick-arrow {@include displayN;}.slick-dots {@include displayN;}}@media (max-width: 479px) {.img-slick {margin: marginZAuto;}.titulo-slick01 {margin: marginZAuto;}}}}
